force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Archived__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Archived__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>