force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Created_At__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Created_At__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source - myTrailhead</complianceGroup>
    <description>The date/time that the Trail was created.</description>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>