force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Description__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Description__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>