force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__External_Id__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__External_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <description>This field has been deprecated and is no longer being used.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field has been deprecated and is no longer being used.</inlineHelpText>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>