force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Icon__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Icon__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_myTrailhead</complianceGroup>
    <label>Icon</label>
    <required>true</required>
    <type>Url</type>
</CustomField>