force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Namespace__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Namespace__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>Namespace</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>