force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Products__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Products__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source - myTrailhead</complianceGroup>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>