force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Roles__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Roles__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source - myTrailhead</complianceGroup>
    <label>Roles</label>
    <type>TextArea</type>
</CustomField>