force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__Tags__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Tags__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_myTrailhead</complianceGroup>
    <description>Search terms for trails</description>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>