force-app/main/default/objects/trailheadapp__Trail__c/fields/trailheadapp__URL__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__URL__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_myTrailhead</complianceGroup>
    <description>Link to the trail on the trailhead platform</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>